--- a/lang/en/deprecated.txt
+++ b/lang/en/deprecated.txt
@@ -1,2 +1,7 @@
 subscribersto,mod_hsuforum
 postmailinfo,mod_hsuforum
+emaildigestupdated,mod_hsuforum
+emaildigestupdated_default,mod_hsuforum
+emaildigest_0,mod_hsuforum
+emaildigest_1,mod_hsuforum
+emaildigest_2,mod_hsuforum
